# whatsapp-agent

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0002_change_media_to_text.py  0003_add_media_text_column.py  08a2e7d921ff_add_api_key_to_user_model.py  0e5b445a4cc6_add_status_to_broadcast_and_contact.py  1d64d7a00aff_improve_stage_folw.py  4eb873a31173_add_input_output_tokens_in_message_table.py  58edd8b64223_remove_user_id_to_whatsapp_session.py  7a8b9c0d1e2f_add_meta_message_id_to_whatsapp_message.py  9ef0fde475aa_update_timezone.py  a1b2c3d4e5f6_add_assistant_tool.py  ae92f1cffd31_add_workspace_id_to_whatsapp_account.py  b2c3d4e5f6a7_add_api_request_tool_type.py  bbeca83de7b1_replace_media_text_with_media_jsonb.py  c1d2e3f4a5b6_add_is_active_to_whatsapp_account.py  cdd2c70c748d_add_stage_columns.py  e5cc68d86298_001_create_tables.py  f0f63f4c66f9_add_table_for_rag_file.py
src/app/: main.py
src/app/common/: responses.py  send_mail.py  settings.py
src/app/controller/: account_controller.py  broadcast_controller.py  message_controller.py  rag_controller.py  session_controller.py  template_controller.py  tool_controller.py  user_controller.py
src/app/database/: db_handler.py
src/app/models/: model.py
src/app/prompt/: stage_prompt.py  summary_prompt.py  (+1 more)
src/tests/: conftest.py  fixtures.py  helpers.py  test_account.py  test_broadcast.py  test_lifespan.py  test_message.py  test_rag.py  test_session.py  test_template.py  test_tool.py  test_tool_schema.py  test_user.py
(+38 files in other folders)
