[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.3",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "boto3>=1.35.0",
    "cryptography>=46.0.4",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "google-genai>=1.0.0",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "mem0ai>=1.0.3",
    "passlib>=1.7.4",
    "pillow>=12.1.1",
    "pillow-heif>=0.21.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.1.0",
    "scalar-fastapi>=1.6.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
start = "app.main:main"
